<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        
     <TextView android:id="@+id/cf"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:gravity="left"          
           android:text="@string/cf"
           android:textStyle="bold"
           android:textSize="20sp">
     </TextView> 
     
     <TextView android:id="@+id/zf"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:gravity="left"          
           android:text="@string/zf"
           android:textStyle="bold"
           android:textSize="20sp">
     </TextView> 
 
     <TextView android:id="@+id/sf"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:gravity="left"          
           android:text="@string/sf"
           android:textStyle="bold"
           android:textSize="20sp">
     </TextView> 
     
     <TextView android:id="@+id/of"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:gravity="left"          
           android:text="@string/of"
           android:textStyle="bold"
           android:textSize="20sp">
     </TextView> 

</LinearLayout>